# COMPSCI3MI3-F2023

./: .gitignore  LICENSE  README.md
Assignments/a1/: README.md  a1.cabal  hie.yaml
Assignments/a1/src/A1/: Eval.hs
Assignments/a1/test/: Main.hs
Assignments/a2/: A2_solutions.pl
Assignments/a3/: LoopyLambda.hs  SKI.hs
Assignments/a3/skeleton/: README.txt  a3.cabal  hie.yaml
Assignments/a3/skeleton/src/: A3.hs
Assignments/a3/skeleton/src/A3/: LoopyLambda.hs  SKI.hs
Assignments/a3/skeleton/test/: LoopyLambdaTests.hs  Main.hs  SKITests.hs
Assignments/a4/: solution.pl
Assignments/a5/: Skel.hs
Exam/: sample.txt
Lecture/: Nov14.agda  Nov14full.agda  Oct17.hs  Oct19.hs  Sept12.hs  Sept14.hs  Sept14pre.hs  Sept21.pl  Sept22.hs  Week 1 Lecture 1 & 2.md  Week1Lecture1&2Notes.md  typing.pl
Lecture/embedding dsls lectures/: PicTagless.hs  Pictures.hs  PicturesDeep.hs
Midterm/: ans.txt
Midterm Review/: Basics.hs  RegularExpressionsDeep.hs  RegularExpressionsShallow.hs  RegularExpressionsTagless.hs  basics.pl  review.md
Tutorial/: Tactics.hs
