cabal-version:      3.0
name:               a3
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
-- license-file:       LICENSE
author:             Reed Mullanix
maintainer:         reedmullanix@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
    import:           warnings
    exposed-modules:
      A3.SKI,
      A3.LoopyLambda,
    build-depends:
      base ^>=4.17.1.0,
      containers >= 0.6.0.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite a3-test
    import:           warnings
    default-language: GHC2021
    other-modules:
      SKITests
      LoopyLambdaTests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        a3,
        base ^>=4.17.1.0,
        HUnit ^>=1.6
